# reliefqueue-ai

./: .env.example  .gitignore  .replit  HACKATHON.md  Makefile  README.md  pyproject.toml  replit.md  replit.nix
acceptance/: product_action_map.json
attached_assets/: Pasted-URGENT-JUDGE-FACING-RELEASE-FIX-Do-not-redesign-unrelat_1783768322595.txt  Pasted-URGENT-RELEASE-BLOCKING-TASK-make-the-existing-real-AMD_1783765629239.txt
dashboard/: aistudio-required-package-merge.json  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
docs/: ai-boundary.md  amd-evidence.md  development.md  index.md  living-guide.md  operations.md  pilot-readiness.md  safety-boundary.md
fixtures/: amd_evidence_campaign_v1.json  field_workers.json  operation_zones.json  reliefqueue_seed_reports.jsonl  slice1_expected_behavior.json
schemas/: amd_evidence_campaign_v1.schema.json  product_live_schema.sql
scripts/: amd_evidence_report.py  amd_quality_live_validation.py  change_guide.py  docs_check.py  docs_index_check.py  local_ai_context.py  portal_urls.py  public_ship_check.py  replit_deploy_run.sh  replit_smoke.sh  submission_final_gate.py  submission_live_amd_check.py  submission_public_check.py  website_readiness_check.sh
tests/: test_amd_evidence_api.py  test_amd_evidence_campaign.py  test_amd_evidence_dashboard_contract.py  test_amd_inference_quality.py  test_amd_quality_final_gate.py  test_burst_verification.py  test_container_runtime_readiness.py  test_evidence_assistant.py  test_hardening_commands.py  test_judge_front_door_live_readiness.py  (+24 more)
(+136 files in other folders)
